# DailyApp

./: .gitignore  CMakeLists.txt  README.md
analytics/: food_history.py  weight_history.py
dailyapp/: CMakeLists.txt
dailyapp/src/: main.cpp
food-tracker/: CMakeLists.txt
food-tracker/analytics/: plot_nutrition.py
food-tracker/include/: Batch.hpp  Calculator.hpp  Csv.hpp  Date.hpp  Extra.hpp  FoodCli.hpp  Product.hpp  ProductDB.hpp
food-tracker/src/: Calculator.cpp  Csv.cpp  Date.cpp  FoodCli.cpp  ProductDB.cpp  main.cpp
mass-tracker/: CMakeLists.txt  README.md
mass-tracker/analytics/: plot_weights.py
mass-tracker/include/: Storage.hpp  WeightEntry.hpp
mass-tracker/src/: Storage.cpp  main.cpp
weight-tracker/: CMakeLists.txt  README.md
weight-tracker/include/: Storage.hpp  WeightCli.hpp
weight-tracker/src/: Storage.cpp  WeightCli.cpp  main.cpp
