cmake_minimum_required(VERSION 3.20)

project(mass_tracker LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(mass_tracker
    src/main.cpp
)

target_include_directories(mass_tracker
    PRIVATE
        ${CMAKE_CURRENT_SOURCE_DIR}/include
)